[package]
name = "enet-sys"
version = "0.2.0"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
description = "Low level bindings to the enet C library"
license = "MIT"
repository = "https://github.com/ruabmbua/enet-sys"
build = "build.rs"

[build-dependencies]
bindgen = "0.35.0"
cmake = "0.1.29"
