[package]
name = "enet-sys"
version = "1.0.1"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
description = "Low level bindings to the enet C library"
license = "MIT"
repository = "https://github.com/ruabmbua/enet-sys"
links = "enet"
build = "build.rs"

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1.44"
